[[bin]]
name = "png2aa"
path = "src/cli.rs"

[[bin]]
name = "png2aa-web"
path = "src/web.rs"

[package]
name = "png2aa"
version = "0.1.0"
authors = ["Yusuke Sangenya (genya0407) <longinus.eva@gmail.com>"]
repository = "https://github.com/genya0407/png2aa"
keywords = ["image", "png"]
license-file = "LICENSE"
readme = "README.md"
description = "Convert PNG image to ASCII Art."
documentation = "https://genya0407.github.io/png2aa/target/doc/png2aa/index.html"

[dependencies]
ndarray = { version = "0.10.0" }
image = "0.18.0"
string-error = "0.1.0"
getopts = "0.2"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0"
base64 = "~0.6.0"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.3.5"
default-features = false
features = ["json"]
