[package]
name = "png2aa"
version = "0.1.2"
authors = ["Yusuke Sangenya (genya0407) <longinus.eva@gmail.com>"]
repository = "https://github.com/genya0407/png2aa"
keywords = ["image", "png"]
license-file = "LICENSE"
readme = "README.md"
description = "Convert PNG image to ASCII Art."
documentation = "https://genya0407.github.io/png2aa/target/doc/png2aa/index.html"

[[bin]]
name = "png2aa"
path = "src/cli.rs"

[dependencies]
ndarray = { version = "0.10.0" }
image = "0.18.0"
string-error = "0.1.0"
getopts = "0.2"
base64 = "~0.6.0"
