[package]
name = "image2aa_web"
version = "0.1.4"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
edition = '2018'

[[bin]]
name = "image2aa_web"
path = "src/main.rs"

[dependencies]
image2aa_core = { path = '../core' }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_codegen = "0.5.0-rc.1"
image = "0.23.6"
time = "*"
imageproc = "0.22.0"
rusttype = "0.9.2"
rand = "0.4.2"
serde = "*"